<resources>
    <string name="app_name">InteractiveModuleProject</string>
    <string name="pengantar_petunjuk">Dalam mencapai tujuan dan prestasi belajar secara maksimal, berikut adalah langkah-langkah yang perlu kamu ikuti agar dapat memahami serta menggunakan modul ini dengan baik :</string>
    <string name="petunjuk_1">Berdo’alah kepada Tuhan Yang Maha Esa sesuai dengan kepercayaan dan agamamu masing-masing.</string>
    <string name="petunjuk_2">Pahamilah capaian pembelajaran dan tujuan pembelajaran yang tercantum agar kamu dapat mengetahui materi apa yang akan kamu pelajari dalam modul ini.</string>
    <string name="petunjuk_3">Bacalah dan pahamilah uraian materi yang terdapat daam modul dengan seksama.</string>
    <string name="petunjuk_4">Klik tombol</string>
    <string name="petunjuk_4_1">untuk menuju ke halaman</string>
    <string name="petunjuk_4_2">selanjutnya, dan klik</string>
    <string name="petunjuk_4_3">untuk ke halaman</string>
    <string name="petunjuk_4_4">sebelumnya</string>
    <string name="petunjuk_5">Kamu juga bisa klik tombol</string>
    <string name="petunjuk_5_1">untuk kembali</string>
    <string name="petunjuk_5_2">ke bagian daftar isi</string>
    <string name="petunjuk_6">Catatlah uraian materi yang menurutmu penting untuk menunjang pemahaman dasarmu.</string>
    <string name="petunjuk_7">Kerjakanlah juga setiap rangkaian tugas dari soal evaluasi untuk mengukur penguasaan materi dalam modul ini.</string>
    <string name="petunjuk_8">Jika setelah membaca, mengerjakan tugas, melaksanakan proyek, serta mengerjakan soal evaluasi kamu masih memperoleh hasil yang kurang memuaskan, maka ulangi kembali proses membaca dan memahami materi pada modul ini!</string>
    <string name="no_1">1.</string>
    <string name="no_2">2.</string>
    <string name="no_3">3.</string>
    <string name="no_4">4.</string>
    <string name="no_5">5.</string>
    <string name="no_6">6.</string>
    <string name="no_7">7.</string>
    <string name="no_8">8.</string>
    <string name="semangat">JANGAN PUTUS ASA DAN TETAP SEMANGAT!</string>
    <string name="capaian_pembelajaran">Capaian Pembelajaran</string>
    <string name="content_cp">Dalam mencapai tujuan dan prestasi belajar secara maksimal, berikut adalah langkah-langkah yang perlu kamu ikuti agar dapat memahami serta menggunakan modul ini dengan baik :</string>
    <string name="petunjuk_penggunaan_modul">Petunjuk Penggunaan Modul</string>
    <string name="tujuan_pembelajaran">Tujuan Pembelajaran</string>
    <string name="content_tp">Berikut adalah beberapa tujuan pembelajaran yang dimuat dalam materi pelajaran Kegiatan Ekonomi dan Ekonomi Kreatif :</string>
    <string name="tujuanpembelajaran_1">Melalui pengamatan gambar “Kegiatan di Pasar”, siswa dapat mengidentifikasi kegiatan ekonomi yang ada di masyarakat.</string>
    <string name="tujuanpembelajaran_2">Melalui kegiatan diskusi dengan teman sebangku, siswa dapat menjelaskan pengertian kegiatan ekonomi.</string>
    <string name="tujuanpembelajaran_3">Melalui infografis jenis-jenis kegiatan ekonomi, siswa dapat menjelaskan pengertian produksi, distribusi, dan konsumsi yang ada di masyarakat.</string>
    <string name="tujuanpembelajaran_4">Setelah mengamati video, “Ekonomi Kreatif”, siswa dapat menjelaskan pengertian ekonomi kreatif.</string>
    <string name="tujuanpembelajaran_5">Melalui mengamati video, siswa dapat menganalisis berbagai bidang ekonomi kreatif.</string>
    <string name="tujuanpembelajaran_6">Melalui kegiatan “Mind Mapping”, siswa dapat menguraikan bidang ekonomi kreatif yang ada di lingkungan sekitar.</string>
    <string name="tujuanpembelajaran_7">Melalui lembar “Refleksi, siswa dapat membuat laporan tentang apa yang dipelajarinya hari ini.</string>
    <string name="tujuanpembelajaran_8">Melalui kegiatan presentasi, siswa dapat mempresentasikan hasil refleksinya.</string>
    <string name="kegiatan_ekonomi">Kegiatan Ekonomi</string>
    <string name="content_box_mke">Pernahkah kalian membeli sayuran di pasar? Selain itu, apakah kalian juga pernah membantu orang tua berjualan? Apabila pernah maka kalian telah melakukan kegiatan ekonomi. Kira-kira apa yang dimaksud dengan kegiatan ekonomi?\n<b>Coba diskusikanlah dengan teman sebangkumu!</b></string>
    <string name="conv_nine_guru_1">Setelah berdiskusi dengan teman sebangkumu apakah kini kamu mengetahui apa itu kegiatan ekonomi?</string>
    <string name="nine_siswa_one">Saya sudah mengetahuinya Bu, akan tetapi Saya masih sedikit bingung, apa itu kegiatan ekonomi?</string>
    <string name="nine_guru_two">Sekarang coba kamu perhatikan penjelasan berikut ini!</string>
    <string name="list_kunjaw">1. BENAR\n2. BENAR\n3. SALAH\n4. BENAR\n5. SALAH\n6. BENAR\n7. SALAH\n8. SALAH\n9. SALAH\n10. BENAR</string>
    <string name="orang_yang_berhasil_adalah_mereka_yang_bersungguh_sungguh">\"orang yang berhasil adalah mereka yang bersungguh-sungguh\"</string>
    <string name="daftar_pustaka">Daftar Pustaka</string>
    <string name="materi_kegiatan_ekonomi">Materi Kegiatan Ekonomi</string>
    <string name="link_dapus_1">https://ditsmp.kemdikbud.go.id/kegiatan-ekonomi-produksi-distribusi-dan-konsumsi/</string>
    <string name="materi_ekonomi_kreatif">Materi Ekonomi Kreatif</string>
    <string name="title_cover_belakang">PENDIDIKAN GURU SEKOLAH DASAR\nDEPARTEMEN PEDAGOGIK\nFAKULTAS ILMU PENDIDIKAN\nUNIVERSITAS PENDIDIKAN INDONESIA\n2022</string>
    <string name="arahan_evaluasi">Bentuk evaluasi di bawah ini merupakan evaluasi Benar - Salah yang dapat kamu kerjakan pada buku tulismu, tulis kata benar jika kamu merasa pernyataan yang ada benar dan tulis kata salah jika kamu merasa pernyataan yang ada salah!</string>
    <string name="soal_1">1. Sebuah aktivitas yang dilakukan oleh manusia untuk memenuhi kebutuhan hidupnya disebut dengan Kegiatan Ekonomi.</string>
    <string name="soal_2">2. Produksi adalah kegiatan untuk menghasilkan suatu barang atau jasa. Pelaku dari kegiatan produksi disebut sebagai produsen. </string>
    <string name="soal_3">3. Contoh dari produksi adalah grosis yang menjual sembako untuk masyarakat.</string>
    <string name="soal_4">4. Orang yang melakukan distribusi disebut sebagai distributor.</string>
    <string name="soal_5">5. Kegiatan ekonomi yang menghasilkan nilai guna suatu barang atau jasa secara berangsur-angsur disebut dengan konsumsi.</string>
    <string name="soal_6">6. Ekonomi kreatif merupakan bidang perekonomian yang mengutamakan ide gagasan dan kreativitas dalam prosesnya.</string>
    <string name="soal_7">7. Bidang mode dalam ekonomi kreatif ialah kegiatan dengan berbagai penciptaan, produksi, serta distribusi produk-produk dari para pengrajin.</string>
    <string name="soal_8">8. Seni Drama tidak termasuk kepada jenis dalam bidang ekonomi kreatif.</string>
    <string name="soal_9">9. Bidang perfilman, video, dan fotografi dalam ekonomi kreatif meliputi penciptaan dan produksi berbagai program di televisi seperti acara game, kuis, acara ragam, hingga infotainment. </string>
    <string name="soal_10">10. Bidang desain dalam ekonomi kreatif meliputi segala kegiatan kreatif dalam hal desain, mulai dari grafis, interior, produk, industri, hingga desain untuk pemasaran produk</string>
    <string name="benar">Benar</string>
    <string name="salah">Salah</string>
    <string name="lembar_refleksi">Lembar Refleksi</string>
    <string name="evaluasi">Evaluasi</string>
    <string name="kunci_jawaban">Kunci Jawaban</string>
</resources>