<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FF"
    tools:context=".FourActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tv_title"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/assets_four_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/petunjuk_pengantar"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pengantar_petunjuk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_one"
            style="@style/TextStyleBelleza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_1"
            app:layout_constraintStart_toStartOf="@+id/petunjuk_pengantar"
            app:layout_constraintTop_toBottomOf="@+id/petunjuk_pengantar" />

        <TextView
            android:id="@+id/content_one"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_one"
            app:layout_constraintTop_toTopOf="@+id/tv_one" />

        <TextView
            android:id="@+id/tv_two"
            style="@style/TextStyleBelleza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_2"
            app:layout_constraintStart_toStartOf="@+id/tv_one"
            app:layout_constraintTop_toBottomOf="@+id/content_one" />

        <TextView
            android:id="@+id/content_two"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_two"
            app:layout_constraintTop_toTopOf="@+id/tv_two" />

        <TextView
            android:id="@+id/tv_three"
            style="@style/TextStyleBelleza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_3"
            app:layout_constraintStart_toStartOf="@+id/tv_two"
            app:layout_constraintTop_toBottomOf="@+id/content_two" />

        <TextView
            android:id="@+id/content_three"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_three"
            app:layout_constraintTop_toTopOf="@+id/tv_three" />

        <TextView
            android:id="@+id/tv_four"
            style="@style/TextStyleBelleza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/no_4"
            app:layout_constraintStart_toStartOf="@+id/tv_three"
            app:layout_constraintTop_toBottomOf="@+id/content_three" />

        <TextView
            android:id="@+id/content_four"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/petunjuk_4"
            app:layout_constraintStart_toEndOf="@+id/tv_four"
            app:layout_constraintTop_toTopOf="@+id/tv_four" />

        <ImageView
            android:id="@+id/img_prev"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:rotation="180"
            android:src="@drawable/assets_btn_nextprev"
            app:layout_constraintBottom_toBottomOf="@+id/content_four"
            app:layout_constraintStart_toEndOf="@+id/content_four"
            app:layout_constraintTop_toTopOf="@+id/content_four" />

        <TextView
            android:id="@+id/content_four_1"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_4_1"
            app:layout_constraintBottom_toBottomOf="@+id/img_prev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_prev"
            app:layout_constraintTop_toTopOf="@+id/img_prev" />

        <TextView
            android:id="@+id/content_four_2"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/petunjuk_4_2"
            app:layout_constraintStart_toStartOf="@+id/content_four"
            app:layout_constraintTop_toBottomOf="@+id/content_four" />

        <ImageView
            android:id="@+id/img_next"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/assets_btn_nextprev"
            app:layout_constraintBottom_toBottomOf="@+id/content_four_2"
            app:layout_constraintStart_toEndOf="@+id/content_four_2"
            app:layout_constraintTop_toTopOf="@+id/content_four_2" />

        <TextView
            android:id="@+id/content_four_3"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_4_3"
            app:layout_constraintBottom_toBottomOf="@+id/img_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_next"
            app:layout_constraintTop_toTopOf="@+id/img_next" />

        <TextView
            android:id="@+id/content_four_4"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_4_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/content_four_2"
            app:layout_constraintTop_toBottomOf="@+id/content_four_2" />

        <TextView
            android:id="@+id/tv_five"
            style="@style/TextStyleBelleza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_5"
            app:layout_constraintStart_toStartOf="@+id/tv_four"
            app:layout_constraintTop_toBottomOf="@+id/content_four_4" />

        <TextView
            android:id="@+id/content_five"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/petunjuk_5"
            app:layout_constraintStart_toEndOf="@+id/tv_five"
            app:layout_constraintTop_toTopOf="@+id/tv_five" />

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/assets_btn_menu"
            app:layout_constraintBottom_toBottomOf="@+id/content_five"
            app:layout_constraintStart_toEndOf="@+id/content_five"
            app:layout_constraintTop_toTopOf="@+id/content_five" />

        <TextView
            android:id="@+id/content_five_1"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_5_1"
            app:layout_constraintBottom_toBottomOf="@+id/img_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_menu"
            app:layout_constraintTop_toTopOf="@+id/img_menu" />

        <TextView
            android:id="@+id/content_five_2"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_5_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/content_five"
            app:layout_constraintTop_toBottomOf="@+id/content_five" />

        <TextView
            android:id="@+id/tv_six"
            style="@style/TextStyleBelleza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_6"
            app:layout_constraintStart_toStartOf="@+id/tv_five"
            app:layout_constraintTop_toBottomOf="@+id/content_five_2" />

        <TextView
            android:id="@+id/content_six"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_six"
            app:layout_constraintTop_toTopOf="@+id/tv_six" />

        <TextView
            android:id="@+id/tv_seven"
            style="@style/TextStyleBelleza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_7"
            app:layout_constraintStart_toStartOf="@+id/tv_six"
            app:layout_constraintTop_toBottomOf="@+id/content_six" />

        <TextView
            android:id="@+id/content_seven"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_seven"
            app:layout_constraintTop_toTopOf="@+id/tv_seven" />

        <TextView
            android:id="@+id/tv_eight"
            style="@style/TextStyleBelleza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_8"
            app:layout_constraintStart_toStartOf="@+id/tv_seven"
            app:layout_constraintTop_toBottomOf="@+id/content_seven" />

        <TextView
            android:id="@+id/content_eight"
            style="@style/TextStyleBelleza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/petunjuk_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_eight"
            app:layout_constraintTop_toTopOf="@+id/tv_eight" />


        <TextView
            android:id="@+id/tv_semangat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/belleza"
            android:text="@string/semangat"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/content_eight"
            app:layout_constraintStart_toStartOf="@+id/tv_eight"
            app:layout_constraintTop_toBottomOf="@+id/content_eight" />

        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            android:src="@drawable/assets_btn_nextprev"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_semangat" />

        <ImageView
            android:id="@+id/btn_prev"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            android:rotation="180"
            android:src="@drawable/assets_btn_nextprev"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>