<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6D5F0"
    tools:context=".TwentyTwoActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextTitleCupCakes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/daftar_pustaka"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dapus_title_one"
        style="@style/TextStyleBelleza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/materi_kegiatan_ekonomi"
        android:textColor="#F58611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/dapus_one"
        style="@style/TextStyleBelleza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/link_dapus_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dapus_title_one"
        app:layout_constraintTop_toBottomOf="@+id/dapus_title_one" />

    <TextView
        android:id="@+id/dapus_title_two"
        style="@style/TextStyleBelleza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/materi_ekonomi_kreatif"
        android:textColor="#F58611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dapus_one" />

    <TextView
        android:id="@+id/dapus_two"
        style="@style/TextStyleBelleza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/link_dapus_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dapus_title_two"
        app:layout_constraintTop_toBottomOf="@+id/dapus_title_two" />

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:rotation="180"
        android:src="@drawable/assets_btn_nextprev_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>